# vcore

./: .gitmodules  CMakeLists.txt  README.md  main.cxx  mesh.hxx  shader.cxx  shader.hxx  time.hxx  timer.hxx  vcore.kdev4
cmake/: FindGLFW.cmake  FindGLM.cmake
glad/: glad.c  glad.h
map/: block.hxx  helpers.hxx  manager.hxx  map.cxx  map.hxx
mapgen/: heightmap.cxx  heightmap.hxx  interface.hxx
mapgen/minetest/: CMakeLists.txt
mapgen/minetest/common/: map.hxx  mapgen.cxx  mapgen.hxx  noise.cxx  noise.hxx  types.hxx
mapgen/minetest/v6/: mapgen_v6.cxx  mapgen_v6.hxx
meshgen/: meshing.hxx  slices.hxx  slicing.hxx  swizzle.hxx
shaders/: land.frag  land.vert  tty.f.glsl  tty.g.glsl
terminal/: ascii.c  compile_font.py  gltty.cxx  gltty.hxx  rasterfont.h  tty.hxx
textures/: image-credits.txt
util/: io.cxx  io.hxx  perlin.cxx  perlin.hxx
